tests/parser/invalidinput/progressiontest_invalidsymbol.idp
LTCvocabulary V{
	type Time
	Start:Time
	Next(Time):Time
	P(Time)
	type S
	Q(S,Time)
}

structure S:V_ss{
	P = true
	S={1..3}
}


structure S2:V_bs{
	P = true
	S={1..3}
	P_next = false
}

LTCvocabulary V2(MyTime, MyStart, Peter){

	type MyTime
	MyStart:MyTime
	Jos(MyTime): MyTime
	
	P(MyTime)
}

structure S3:V2_ss{
	P = true
}

procedure main(){

}
